--- a/index.html
+++ b/index.html
@@ -27,6 +27,43 @@
     <main class="main-container">
       <!-- start of header section -->
       <header>
+        <!-- burger menu sidebar for responsive screens -->
+        <button class="sidebar-burger-menu">
+          <i class="fas fa-bars"></i>
+        </button>
+
+        <aside class="sidebar">
+          <div class="sidebar-container">
+            <div>
+              <img class="logo" src="logo.png" alt="" />
+              <button class="close-btn"><i class="fas fa-times"></i></button>
+            </div>
+            <ul class="links">
+              <li class="home-sidebar">
+                <a a href="" class="home">Home</a>
+              </li>
+              <li class="discover-sidebar">
+                <a href="" class="discover">Discover</a>
+              </li>
+              <li class="activties-sidebar">
+                <a href="" class="activties">Activties</a>
+              </li>
+              <li class="about-sidebar">
+                <a href="" class="about">About</a>
+              </li>
+              <li class="contact-sidebar">
+                <a href="" class="contact">Contact</a>
+              </li>
+              <li class="register-sidebar">
+                <a href="" class="register">Register</a>
+              </li>
+              <li class="sign-in-sidebar">
+                <a href="" class="sign-in">Sign-in</a>
+              </li>
+            </ul>
+          </div>
+        </aside>
+        <!-- burger menu sidebar for responsive screens -->
         <nav class="header-nav">
           <!-- logo and title -->
           <div class="nav-logo">
@@ -72,13 +109,15 @@
           Plan and book our perfect trip with expert advice, travel tips,
           destination information and inspiration from us
         </p>
-        <nav class="search-place-nav">
-          <form class="search-place-form">
+      </section>
+      <div class="search-nav-container">
+        <nav class="search-place-nav-responsive">
+          <form class="search-place-form-responsive">
             <label>
               <input
                 class="location-input-search"
                 type="text"
-                placeholder="Where are you going"
+                placeholder="Where to?"
               />
             </label>
             <br />
@@ -86,7 +125,7 @@
               <input
                 class="check-in-input-search"
                 type="text"
-                placeholder="Check in date"
+                placeholder="Check-in date"
               />
             </label>
             <br />
@@ -94,7 +133,7 @@
               <input
                 class="check-out-input-search"
                 type="text"
-                placeholder="Check out date"
+                placeholder="Check-out date"
               />
             </label>
             <br />
@@ -113,9 +152,53 @@
               />
             </label>
           </form>
-
         </nav>
-      </section>
+      </div>
+
+      <div class="search-nav-container">
+        <nav class="search-place-nav">
+          <form class="search-place-form">
+            <label>
+              <input
+                class="location-input-search"
+                type="text"
+                placeholder="Where to?"
+              />
+            </label>
+            <br />
+            <label>
+              <input
+                class="check-in-input-search"
+                type="text"
+                placeholder="Check-in date"
+              />
+            </label>
+            <br />
+            <label>
+              <input
+                class="check-out-input-search"
+                type="text"
+                placeholder="Check-out date"
+              />
+            </label>
+            <br />
+            <label>
+              <input
+                class="guests-input-search"
+                type="text"
+                placeholder="Guests"
+              />
+            </label>
+            <label>
+              <input
+                class="search-nav-btn"
+                type="submit"
+                placeholder="Search"
+              />
+            </label>
+          </form>
+        </nav>
+      </div>
 
       <div class="covid-restrictions-warning">
         <svg
@@ -215,6 +298,7 @@
           <p>320 properties</p>
         </article>
         <!-- end of article 4 -->
+
       </section>
       <!-- end of articles section -->
 
@@ -325,6 +409,7 @@
 
       <footer class="footer">
         <!-- start of footer lists -->
+
         <div class="nav-logo">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -339,7 +424,6 @@
             />
           </svg>
           <h4 class="logo-title">Your home</h4>
-          <p>Your next goto companion for travel</p>
         </div>
 
         <!-- start of list1 -->
@@ -389,38 +473,45 @@
       </footer>
     </main>
     <!-- end of main -->
-    <div class="under-footer">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="16"
-        height="16"
-        viewBox="0 0 16 16"
-        fill="none"
-      >
-        <g clip-path="url(#clip0_4_1207)">
-          <path
-            d="M8.00016 14.6667C4.32016 14.6667 1.3335 11.68 1.3335 8C1.3335 4.32 4.32016 1.33333 8.00016 1.33333C11.6802 1.33333 14.6668 4.32 14.6668 8C14.6668 11.68 11.6802 14.6667 8.00016 14.6667Z"
-            stroke="#4F4F4F"
-            stroke-width="1.2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M9.92032 10C9.43417 10.4287 8.80851 10.6657 8.16032 10.6667C6.68699 10.6667 5.49365 9.47333 5.49365 8C5.49365 6.52666 6.68699 5.33333 8.16032 5.33333C8.80851 5.33426 9.43417 5.57125 9.92032 5.99999"
-            stroke="#4F4F4F"
-            stroke-width="1.2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </g>
-        <defs>
-          <clipPath id="clip0_4_1207">
-            <rect width="16" height="16" fill="white" />
-          </clipPath>
-        </defs>
-      </svg>
-      <p>my Dream Place 2022</p>
+    <div class="container-down-banner">
+      <div class="under-footer">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          viewBox="0 0 16 16"
+          fill="none"
+        >
+          <g clip-path="url(#clip0_4_1207)">
+            <path
+              d="M8.00016 14.6667C4.32016 14.6667 1.3335 11.68 1.3335 8C1.3335 4.32 4.32016 1.33333 8.00016 1.33333C11.6802 1.33333 14.6668 4.32 14.6668 8C14.6668 11.68 11.6802 14.6667 8.00016 14.6667Z"
+              stroke="#4F4F4F"
+              stroke-width="1.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M9.92032 10C9.43417 10.4287 8.80851 10.6657 8.16032 10.6667C6.68699 10.6667 5.49365 9.47333 5.49365 8C5.49365 6.52666 6.68699 5.33333 8.16032 5.33333C8.80851 5.33426 9.43417 5.57125 9.92032 5.99999"
+              stroke="#4F4F4F"
+              stroke-width="1.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_4_1207">
+              <rect width="16" height="16" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+        <p>my Dream Place 2022</p>
+      </div>
     </div>
+
+
+
+
+    <script src="home.js"></script>
   </body>
   <!-- end of body -->
 </html>
