--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
         <article class="choose-country-section-article">
           <img
             class="choose-country-section-article-img"
-            src="imgs/article1-section1.jpeg"
+            src="imgs/article1-section1.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Australia</h2>
           <p>2246 properties</p>
@@ -257,8 +258,9 @@
         <article class="choose-country-section-article">
           <img
             class="choose-country-section-article-img"
-            src="imgs/article2-section1.jpeg"
+            src="imgs/article2-section1.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Japan</h2>
           <p>1278 properties</p>
@@ -269,8 +271,9 @@
         <article class="choose-country-section-article">
           <img
             class="choose-country-section-article-img"
-            src="imgs/article3-section1.jpeg"
+            src="imgs/article3-section1.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>New Zealand</h2>
           <p>480 properties</p>
@@ -281,8 +284,9 @@
         <article class="choose-country-section-article">
           <img
             class="choose-country-section-article-img"
-            src="imgs/article4-section1.jpeg"
+            src="imgs/article4-section1.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Greece</h2>
           <p>320 properties</p>
@@ -334,8 +338,9 @@
         <article class="popular-section-article1">
           <img
             class="popular-section-article-img"
-            src="imgs/article1-section3.jpeg"
+            src="imgs/article1-section3.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Lakeside Motel Warefront</h2>
           <p>2246 properties</p>
@@ -346,8 +351,9 @@
         <article class="popular-section-article2">
           <img
             class="popular-section-article-img"
-            src="imgs/article2-section3.jpeg"
+            src="imgs/article2-section3.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Recce Graham resort</h2>
           <p>1278 properties</p>
@@ -358,7 +364,7 @@
         <article class="popular-section-article3">
           <img
             class="popular-section-article-img"
-            src="imgs/article3-section3.jpeg"
+            src="imgs/article3-section3.jpg"
             alt=""
           />
           <h2>Fireside Dinners</h2>
@@ -370,8 +376,9 @@
         <article class="popular-section-article4">
           <img
             class="popular-section-article-img"
-            src="imgs/article4-section3.jpeg"
+            src="imgs/article4-section3.jpg"
             alt=""
+            loading="lazy"
           />
           <h2>Oculous Inn Stay</h2>
           <p>320 properties</p>
