--- a/search-results.html
+++ b/search-results.html
@@ -32,7 +32,7 @@
     </head>
     <body>
       <header class="header-loged-in">
-        <nav class="header-loged-in-nav">
+        <nav class="header-loged-in-nav-search-results">
           <div class="nav-logo">
             <a href="index.html"
               ><svg
@@ -51,8 +51,8 @@
             <a href="index.html"><p class="inline">Your home</p></a>
           </div>
 
-          <div class="nav-links">
-            <ul class="nav-bar-link-list">
+          <div class="nav-links-loged-in-search-results">
+            <ul class="nav-bar-link-list-loged-in">
               <li><a href="index.html">Home</a></li>
               <li class="nav-link"><a href="">Discover</a></li>
               <li class="nav-link"><a href="">Activties</a></li>
@@ -93,6 +93,7 @@
             />
           </div>
         </nav>
+        
       </header>
       <div class="search-results-nav-container">
         <nav class="search-results-place-nav">
