--- a/search-results.html
+++ b/search-results.html
@@ -93,7 +93,6 @@
             />
           </div>
         </nav>
-        
       </header>
       <div class="search-results-nav-container">
         <nav class="search-results-place-nav">
@@ -510,7 +509,9 @@
           </div>
           <!-- end of sort by dropdown -->
           <article class="hotel-card">
-            <img class="image-hotel-card" src="imgs/hotel-card1.jpg" alt="" />
+            <a href="place-details.html"
+              ><img class="image-hotel-card" src="imgs/hotel-card1.jpg" alt=""
+            /></a>
             <h2 class="hotel-card-title">Lakeside Motel Warefront</h2>
             <div class="five-stars">
               <svg
