--- a/place-details.html
+++ b/place-details.html
@@ -814,7 +814,9 @@
                 <p class="facilites-text">1 double bed and 1 twin bed</p>
               </div>
             </div>
-            <button class="reserve-room-card-button">Reserve suite</button>
+            <a href="checkout.html"
+              ><button class="reserve-room-card-button">Reserve suite</button>
+            </a>
           </article>
           <!-- end of room 1 card -->
           <!-- start of room 2 card -->
@@ -985,9 +987,8 @@
             <span class="span-covid-text">Learn more </span>
           </p>
         </div>
+        <!-- start of footer lists -->
         <footer class="footer">
-          <!-- start of footer lists -->
-
           <div class="nav-logo">
             <svg
               xmlns="http://www.w3.org/2000/svg"
