--- a/forgot-pw.html
+++ b/forgot-pw.html
@@ -30,6 +30,40 @@
   <body>
     <div class="main-container-home">
       <header class="header-nav">
+        <aside class="sidebar">
+          <div class="sidebar-container">
+            <div>
+              <img class="logo" src="logo.png" alt="" />
+              <button class="close-btn"><i class="fas fa-times"></i></button>
+            </div>
+            <ul class="links">
+              <li class="home-sidebar">
+                <a a href="" class="home">Home</a>
+              </li>
+              <li class="discover-sidebar">
+                <a href="" class="discover">Discover</a>
+              </li>
+              <li class="activties-sidebar">
+                <a href="" class="activties">Activties</a>
+              </li>
+              <li class="about-sidebar">
+                <a href="" class="about">About</a>
+              </li>
+              <li class="contact-sidebar">
+                <a href="" class="contact">Contact</a>
+              </li>
+              <li class="register-sidebar">
+                <a href="" class="register">Register</a>
+              </li>
+              <li class="sign-in-sidebar">
+                <a href="" class="sign-in">Sign-in</a>
+              </li>
+            </ul>
+          </div>
+        </aside>
+        <button class="sidebar-burger-menu">
+          <i class="fas fa-bars"></i>
+        </button>
         <div class="nav-logo">
           <a href="index.html">
             <svg
@@ -62,7 +96,9 @@
             <input class="text-box" type="text" placeholder="" />
           </label>
         </form>
-        <button class="forgot-pw-button">Send reset link</button>
+        <a href="check-inbox.html"
+          ><button class="forgot-pw-button">Send reset link</button></a
+        >
         <p class="conditions-text">
           By creating an account, you agree with our<span
             class="terms-privacy-links"
