--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           destination information and inspiration from us
         </p>
       </section>
+      <!-- nav for searching a place -->
       <div class="search-nav-container2">
         <nav class="search-place-nav-responsive">
           <form class="search-place-form-responsive">
