--- a/index.html
+++ b/index.html
@@ -244,39 +244,43 @@
 
       <!-- start of articles section -->
       <section class="choose-country-section">
+        <div class="flex-countries">
         <!-- start of article 1 -->
-        <article class="choose-country-section-article">
-          <img
+          <article class="choose-country-section-article">
+            <img
             class="choose-country-section-article-img"
             src="imgs/article1-section1.jpg"
             alt=""
             loading="lazy"
-          />
-          <h2>Australia</h2>
-          <p>2246 properties</p>
-        </article>
-        <!-- end of article 1 -->
-        <!-- ------------------- -->
-        <!-- start of article 2 -->
-        <article class="choose-country-section-article">
-          <img
+            />
+            <h2>Australia</h2>
+            <p>2246 properties</p>
+          </article>
+          <!-- end of article 1 -->
+          <!-- ------------------- -->
+          <!-- start of article 2 -->
+          
+          <article class="choose-country-section-article">
+            <img
             class="choose-country-section-article-img"
             src="imgs/article2-section1.jpg"
             alt=""
             loading="lazy"
-          />
-          <h2>Japan</h2>
-          <p>1278 properties</p>
-        </article>
-        <!-- end of article 2 -->
-        <!-- ------------------- -->
+            />
+            <h2>Japan</h2>
+            <p>1278 properties</p>
+          </article>
+          <!-- end of article 2 -->
+        </div>
+          <!-- ------------------- -->
+          <div class="flex-countries">
         <!-- start of article 3 -->
         <article class="choose-country-section-article">
           <img
-            class="choose-country-section-article-img"
-            src="imgs/article3-section1.jpg"
-            alt=""
-            loading="lazy"
+          class="choose-country-section-article-img"
+          src="imgs/article3-section1.jpg"
+          alt=""
+          loading="lazy"
           />
           <h2>New Zealand</h2>
           <p>480 properties</p>
@@ -286,18 +290,19 @@
         <!-- start of article 4 -->
         <article class="choose-country-section-article">
           <img
-            class="choose-country-section-article-img"
-            src="imgs/article4-section1.jpg"
-            alt=""
-            loading="lazy"
+          class="choose-country-section-article-img"
+          src="imgs/article2-section3.jpg"
+          alt=""
+          loading="lazy"
           />
           <h2>Greece</h2>
           <p>320 properties</p>
         </article>
         <!-- end of article 4 -->
+      </div>
       </section>
       <!-- end of articles section -->
-
+      
       <!-- start of inspiration section -->
       <h1 class="inspiration-heading">Get inspiration for your next trip</h1>
       <section class="inspiration-section">
