--- a/search-results.html
+++ b/search-results.html
@@ -491,7 +491,6 @@
               <div class="shared-space-box">Shared space</div>
             </div>
             <!-- end of sort by options rectangle -->
-            
           </div>
           <!-- end of sort by dropdown -->
           <article class="hotel-card">
@@ -1467,7 +1466,7 @@
         </section>
       </main>
 
-      <div class="covid-footer-container">
+      <div class="covid-container-search-place">
         <div class="covid-restrictions-warning">
           <svg
             class="warning-covid-icon"
