--- a/search-results.html
+++ b/search-results.html
@@ -60,6 +60,7 @@
               <li class="nav-link"><a href="">Contact</a></li>
             </ul>
           </div>
+          <!-- notfication and user profile pic -->
           <div class="notifications-profile-photo">
             <svg
               class="notifications-icon"
