--- a/sign-in.html
+++ b/sign-in.html
@@ -217,8 +217,9 @@
         </div>
 
         <a class="btn-sign-in" href="index.html"
-          ><button class="sign-in-button">Continue with email</button></a>
-          
+          ><button class="sign-in-button">Continue with email</button></a
+        >
+
         <div class="flex-2lines-text">
           <div class="under-sign-up-lines"></div>
           <p class="text-between-lines">or use one of these options</p>
