--- a/sign-up.html
+++ b/sign-up.html
@@ -178,8 +178,7 @@
         <div class="sign-in-instaed">
           <p class="have-account">Already have an account?</p>
           <a href="sign-in.html"
-            ><button class="sign-in-sign-up-page">Sign in</button></a
-          >
+            ><button class="sign-in-sign-up-page">Sign in</button></a>
         </div>
       </section>
     </main>
